Fix readability issue with the Cards header text

--- a/source/stylesheets/_homepage.scss
+++ b/source/stylesheets/_homepage.scss
@@ -1238,14 +1238,14 @@ h1 {
     h3 {
       margin-bottom: 50px;
       font-weight: 700;
-      font-size: 36px;
+      font-size: 38px;
       line-height: 49px;
       letter-spacing: 2px;
       color: #f8492d;
 
       @media all and (max-width: $mobile-width) {
         margin-bottom: 35px;
-        font-size: 22px;
+        font-size: 24px;
         letter-spacing: 1px;
         line-height: 24px;
       }
@@ -1254,14 +1254,14 @@ h1 {
     p {
       width: clamp(400px, 60vw, 750px);
       font-weight: 400;
-      font-size: 22px;
+      font-size: 24px;
       line-height: 32px;
       text-align: center;
 
       @media all and (max-width: $mobile-width) {
         width: auto;
         margin: 0 20px;
-        font-size: 14px;
+        font-size: 16px;
         line-height: 22px;
       }
     }
